@@ -2,7 +2,7 @@ abcMIDI :   abc <-> MIDI conversion utilities
 
 midi2abc version 2.92 Aug  04 2008
 abc2midi version 3.00 Nov  25 2012
-abc2abc  version 1.69 Nov  22 2012
+abc2abc  version 1.70 Dec  01 2012
 yaps     version 1.53 Aug  08 2012
 abcmatch version 1.43 Aug  08 2012
 midicopy version 1.10 Sep  22 2006
